--- a/website/index.html
+++ b/website/index.html
@@ -18,9 +18,14 @@
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="stylesheet" href="css/font-icon.css">
+  <script src="./lib.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <script src="../stdlib-workspace/isonlaxman/search/functions/__main__.js"></script>
-  <script src="../keys.js"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+
+  <!-- <script src="../keys.js"></script> -->
+  <!-- <script src="../stdlib-workspace/isonlaxman/search/functions/__main__.js"></script>
+  <script src="../stdlib-workspace/isonlaxman/donate/functions/__main__.js"></script>
+  <script src="../stdlib-workspace/isonlaxman/firearms/functions/__main__.js"></script> -->
 </head>
 
 <body>
@@ -105,6 +110,26 @@
     </div>
   </section>
   <!-- about section -->
+  <!-- Payment section -->
+  <div class="container-fluid">
+    <div class="col-md-6">
+      <form action="/charge" method="post" id="payment-form">
+        <div class="form-row">
+          <label for="card-element">
+            Credit or debit card
+          </label>
+          <div id="card-element">
+            <!-- A Stripe Element will be inserted here. -->
+          </div>
+
+          <!-- Used to display form errors. -->
+          <div id="card-errors" role="alert"></div>
+        </div>
+
+        <button>Submit Payment</button>
+      </form>
+    </div>
+  </div>
   <!-- Footer section -->
   <footer class="footer" id="footer">
     <div class="footer-top section">
@@ -180,13 +205,9 @@
         $('form').addClass('permahover');
       })
 
-    });
-
-    $(document).ready(function () {
       // On donate button press
-      $('donate-button').on('click', function () {
-        console.log("HERE");
-        lib.isonlaxman.donate['@dev'](keys.stripe.secret, function (charge) {
+      $('.donate-button').on('click', function () {
+        lib.isonlaxman.donate['@dev'](function (charge) {
           console.log(charge);
         });
       });
