--- a/website/index.html
+++ b/website/index.html
@@ -109,9 +109,56 @@
       </div>
     </div>
   </section>
-  <!-- about section -->
+  <!-- payment section -->
+  <script src="https://js.stripe.com/v3/"></script>
+
+  <form action="/charge" method="post" id="payment-form">
+    <div class="form-row">
+      <label for="card-element">
+        Credit or debit card
+      </label>
+      <div id="card-element">
+        <!-- A Stripe Element will be inserted here. -->
+      </div>
+  
+      <!-- Used to display form errors. -->
+      <div id="card-errors" role="alert"></div>
+    </div>
+  
+    <button>Submit Payment</button>
+  </form>
+
+  <!-- <section id="intro" class="section intro no-padding">
+    <div class="container-fluid">
+      <div class="row no-gutter">
+        <div class="col-md-6">
+          <div class="avatar"> <img src="images/intro-img1.jpg" alt="" class="img-responsive"> </div>
+          <script src="https://js.stripe.com/v3/"></script>
+          <form action="/charge" method="post" id="payment-form">
+            <div class="form-row">
+              <label for="card-element">
+                Credit or debit card
+              </label>
+              <div id="card-element">
+                <!-- A Stripe Element will be inserted here. -->
+              </div>
+
+              <!-- Used to display form errors. -->
+              <div id="card-errors" role="alert"></div>
+            </div>
+
+            <button>Submit Payment</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </section> -->
+
+
+
+
   <!-- Payment section -->
-  <div class="container-fluid">
+  <!-- <div class="container-fluid">
     <div class="col-md-6">
       <form action="/charge" method="post" id="payment-form">
         <div class="form-row">
@@ -129,7 +176,7 @@
         <button>Submit Payment</button>
       </form>
     </div>
-  </div>
+  </div> -->
   <!-- Footer section -->
   <footer class="footer" id="footer">
     <div class="footer-top section">
