--- a/website/index.html
+++ b/website/index.html
@@ -122,8 +122,8 @@
       <!-- Used to display form errors. -->
       <div id="card-errors" role="alert"></div>
     </div>
+    <input type="button" class="donate-button" value="Submit Payment" />
 
-    <button>Submit Payment</button>
   </form>
 
 
