--- a/website/index.html
+++ b/website/index.html
@@ -105,7 +105,7 @@
     </div>
   </section>
   <!-- payment section -->
-  <form action="/charge" method="post" id="payment-form">
+  <form action="" method="post" id="payment-form">
     <div class="form-row">
       <label for="card-element">
         Credit or debit card
@@ -118,7 +118,7 @@
       <div id="card-errors" role="alert"></div>
     </div>
 
-    <button>Submit Payment</button>
+    <button class='donate-button' >Pay 25</button>
   </form>
 
 
@@ -254,6 +254,7 @@
 
       // Handle form submission.
       var form = document.getElementById('payment-form');
+
       form.addEventListener('submit', function (event) {
         // console.log("FORM LISTENER", event);
         event.preventDefault();
@@ -273,9 +274,10 @@
       // Submit the form with the token ID.
       function stripeTokenHandler(token) {
         // Insert the token ID into the form so it gets submitted to the server
-        console.log("HANDLER", form);
         var form = document.getElementById('payment-form');
         var hiddenInput = document.createElement('input');
+
+        // console.log("HANDLER", $('#payment-form').serialize());
 
         hiddenInput.setAttribute('type', 'hidden');
         hiddenInput.setAttribute('name', 'stripeToken');
@@ -283,8 +285,7 @@
         form.appendChild(hiddenInput);
 
         // Submit the form
-        console.log(form, typeof (form));
-        lib.isonlaxman.donate(form);
+        form.submit();
       }
     });
   </script>
