--- a/website/index.html
+++ b/website/index.html
@@ -59,11 +59,11 @@
     </div>
 
 
-    <!-- <div class="container">
-      <div class=".col-md-4">
-        <div id="map"></div>
-      </div>
-    </div> -->
+    <div class="container" style= "padding-bottom: 5em">
+      <!-- <div class=".col-md-4"> -->
+        <div id="map"  style= "position: absolute; width: 700px; height: 50vh; left: 25%; margin-top: -8em"></div>
+      <!-- </div> -->
+    </div>
 
   </section>
 
@@ -71,14 +71,53 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.9/topojson.min.js"></script>
 
-  <script src="../node_modules/datamaps/dist/datamaps.usa.min.js"></script>
-
+  <!-- <script src="../node_modules/datamaps/dist/datamaps.usa.min.js"></script> -->
+  <script src="http://datamaps.github.io/scripts/datamaps.usa.min.js"></script>
   <!-- Write the script for the map -->
   <script>
-    var map = new Datamap({
-      element: document.getElementById('map'),
-      scope: 'usa'
+
+var bubble_map = new Datamap({
+        element: document.getElementById("map"),
+        scope: 'usa',
+        geographyConfig: {
+            popupOnHover: false,
+            highlightOnHover: false
+        },
+        fills: {
+            'CA': 'blue',
+            'GA': 'red',
+            
+            defaultFill: '#ABDDA4'
+        }, 
+        data: {
+            'CA': {fillKey : 'CA'},
+            'GA': {fillKey : 'GA'}
+        }
     });
+    data = [{
+        name: 'GA',
+        radius: 10,
+        latitude: 32.1656,
+        longitude: -82.9001
+    },
+    {
+        name: 'CA',
+        radius: 30,
+        latitude: 36.7783,
+        longitude: -119.4179
+    }
+    ];
+  
+    bubble_map.labels();
+    bubble_map.bubbles(data);
+
+     bubble_map.svg.call(d3.behavior.zoom().
+        on("zoom", redraw));
+    
+    function redraw() {
+      bubble_map.svg.selectAll("g").attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+ }
+
   </script>
 
   <!-- Support Section -->
