--- a/website/index.html
+++ b/website/index.html
@@ -41,7 +41,6 @@
     <div class="container">
       <div class="col-md-10 col-md-offset-1">
         <div class="banner-text text-center">
-          <h1>FIREARMS</h1>
 
           <!-- Search bar -->
           <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
@@ -59,9 +58,9 @@
     </div>
 
 
-    <div class="container" style= "padding-bottom: 5em">
+    <div class="container" style= "padding-bottom: 5em, overflow: visible">
       <!-- <div class=".col-md-4"> -->
-        <div id="map"  style= "position: absolute; width: 700px; height: 50vh; left: 25%; margin-top: -8em"></div>
+        <div id="map"  style= "position: absolute; width: 1200px; height: 50vh; left: 25%; margin-top: -8em"></div>
       <!-- </div> -->
     </div>
 
@@ -87,13 +86,14 @@ var bubble_map = new Datamap({
             'CA': 'blue',
             'GA': 'red',
             
-            defaultFill: '#ABDDA4'
+            defaultFill: 'rgba(0, 0, 0, .5)'
         }, 
         data: {
             'CA': {fillKey : 'CA'},
             'GA': {fillKey : 'GA'}
-        }
+        },
     });
+
     data = [{
         name: 'GA',
         radius: 10,
@@ -108,7 +108,10 @@ var bubble_map = new Datamap({
     }
     ];
   
-    bubble_map.labels();
+    bubble_map.labels({
+      labelColor: 'white'
+    });
+    
     bubble_map.bubbles(data);
 
      bubble_map.svg.call(d3.behavior.zoom().
