--- a/website/index.html
+++ b/website/index.html
@@ -48,7 +48,7 @@
 
           <!-- Form for the search -->
           <form id="search-form" action="">
-            <input id="bar" type="search" placeholder="Enter a city to map the heat" name="query" autofocus>
+            <input id="bar" type="search" placeholder="Enter a zip code" name="query" autofocus>
             <i class="fa fa-search">
               <input id="submit-button" type="submit" value="" placeholder="" />
             </i>
