--- a/website/index.html
+++ b/website/index.html
@@ -55,15 +55,9 @@
           </form>
         </div>
       </div>
+     
     </div>
-
-
-    <div class="container" style= "padding-bottom: 5em, overflow: visible">
-      <!-- <div class=".col-md-4"> -->
-        <div id="map"  style= "position: absolute; width: 1200px; height: 50vh; left: 25%; margin-top: -8em"></div>
-      <!-- </div> -->
-    </div>
-
+    <div id="map"  style= "position: absolute; width: 1200px; height: 75vh; left: 8%; margin-top: -20em;"></div>
   </section>
 
   <!-- Include the dependencies for this -->
