--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flosix - Bootstrap template, Creative One Page Template</title>
+  <title>CeaseFire</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/flexslider.css">
   <link rel="stylesheet" href="css/jquery.fancybox.css">
